--- a/src/app/layout/components/navs/nav-bar/nav-bar.component.html
+++ b/src/app/layout/components/navs/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar bg-dark">
 
   <a class="navbar-brand mr-5" [routerLink]="['/covid-19/Dashboard']" >
-    <fa-icon [icon]="[this.IconType.Fas,Icon[BtnType.Virus]]" size="lg"></fa-icon> Covid-19
+    <fa-icon [icon]="[this.IconType.Fas,Icon[BtnType.Covid19]]" size="lg"></fa-icon> Covid-19
   </a>
   <!-- <div class="navbar-nav-scroll d-flex w-100">
     <ul class="navbar-nav active">
