--- a/src/app/layout/components/footers/footer-bar/footer-bar.component.html
+++ b/src/app/layout/components/footers/footer-bar/footer-bar.component.html
@@ -3,7 +3,7 @@
         <div class="row">
 
             <div class="col-auto">
-                <a href="mailto:chengjhe810824@gmail.com">Developer : Li, Cheng-Jhe</a>  
+                <a class="text-white" href="mailto:chengjhe810824@gmail.com"><b>Developer : Li, Cheng-Jhe</b></a>  
             </div>
         </div>
     </div>
