add CountGlobalStat Func
Signed-off-by: ChengJhe <chengjhe810824@gmail.com>

--- a/src/app/covid19/containers/global-stat-container/global-stat-container.component.html
+++ b/src/app/covid19/containers/global-stat-container/global-stat-container.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <div *ngIf="this.GlobalStats" class="row justify-content-center">
+    <div *ngIf="this.GlobalStat" class="row justify-content-center">
         <div class="col">
-            <app-stat-card [Stat]="this.GlobalStats[1]"></app-stat-card>
+            <app-stat-card [Stat]="this.GlobalStat"></app-stat-card>
         </div>
 
     </div>
